--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <br>
                 <br>
             </p>
-            <b><i><h1>Origami Designs</h1></i></b>
+            <b><i><h1>DIY Origami Designs</h1></i></b>
             <p>
                 <br>
                 <br>
@@ -37,16 +37,18 @@
                     </a>
                     <ol>
                         <li>
-                            Camels have three sets of eyelids and two rows of eyelashes to 
-                            <br>keep sand out of their eyes.
+                            Camels have three sets of eyelids and  
+                            <br>two rows of eyelashes to keep 
+                            <br>sand out of their eyes.
                         </li>
                         <li>
-                            Camels have thick lips which let them forage for thorny plants 
-                            <br>other animals can't eat.
+                            Camels have thick lips which let them 
+                            forage for thorny plants other 
+                            animals can't eat.
                         </li>
                         <li>
-                            Camel can move easily across the sand because of its specially 
-                            <br>designed feet.
+                            Camel can move easily across the sand because of its specially designed
+                            <br> feet.
                         </li>
                     </ol>
                 </div>
@@ -65,11 +67,12 @@
                             Their feet work like salad tongs.
                         </li>
                         <li>
-                            They mainly change color in order to communicate or regulate 
-                            body temperature.
+                            They mainly change color in order to communicate or regulate body 
+                            temperature.
                         </li>
                         <li>
-                            Unlike many lizards, chameleons can't regrow their tails.
+                            Unlike many lizards, chameleons can't regrow their 
+                            tails.
                         </li>
                     </ol>
                 </div> 
@@ -91,11 +94,11 @@
                         </li>
                         <li>
                             They can also recognise each letter of the human alphabet,differentiate 
-                            <br>between photographs, 
-                            <br>and even distinguish different humans within a photograph.
+                            <br>between photographs, and even distinguish different humans within
+                            <br>a photograph.                           
                         </li>
                         <li>
-                            Pigeons are one of only a small number of species to pass the ‘mirror test’ 
+                            Pigeons are one of only a small number of species to pass the ‘mirror test’
                             <br>–a test of self recognition.
                         </li>
                     </ol>
@@ -112,18 +115,18 @@
                     </a>
                     <ol>
                         <li>
-                            Teddy bears got their name from the story that Teddy Roosevelt refused to shoot 
-                            <br>a bear cub while on a hunting trip in 1902.
+                            Teddy bears got their name from the story that Teddy Roosevelt refused 
+                            <br>to shoot a bear cub while on a hunting trip in 1902.
                         </li>
                         <li>
-                            The first toy stuffed bear was created by German toymaker Margarete Steiff. 
-                            <br>She created a soft plush with movable arms and legs and a friendly
-                            <br>face after taking her nephew to the zoo in 1903.
+                            The first toy stuffed bear was created by German toymaker Margarete Steiff.
+                            <br>She created a soft plush with movable arms and legs and a friendly face
+                            <br>after taking her nephew to the zoo in 1903.
                         </li>
                         <li>
                             The world's smallest stitched teddy bear is a mere 0.29 inches tall!
-                            <br>It was created by South African artist Cheryl Moss who is known for her 
-                            <br>minuscule work.
+                            <br>It was created by South African artist Cheryl Moss who is known 
+                            <br>for her minuscule work.
                         </li>
                     </ol>
                 </div>
@@ -141,9 +144,9 @@
                     </a>
                     <ol>
                         <li>
-                            Pandas go from pink to white and black (or brown).
+                            Pandas go from pink to white and black ( or brown ).
                         <li>
-                            An adult can eat 12–38 kilos of bamboo per day!
+                            An adult can eat 12–38   kilos of bamboo per day!
                         </li>
                         <li>
                             A panda Can Poop 28 Kilos per day!
@@ -162,16 +165,17 @@
                     </a>
                     <ol>
                         <li>
-                            Cicadas can survive a huge fall as babies, or nymphs. They are about the size of
-                            <br>a grain of rice when they drop from a 
-                            <br>tree branch to the ground and start digging.
+                            Cicadas can survive a huge fall as babies, or nymphs.They are about the  
+                            <br>size of a grain of rice when they drop from a tree branch to the
+                            <br>ground and start digging. 
                         <li>
-                            They improve lawns by digging tunnels that allow air into the soil. 
+                            They improve lawns by digging tunnels that allow air into the soil.
                             <br>When they die, their rotting bodies put nitrogen into the soil.
                         </li>
                         <li>
-                            Most have red-orange eyes. But occasionally cicadas have blue, white 
+                            Most have red-orange eyes. But occasionally cicadas have blue, white
                             <br>or grayish eyes.
+                            
                         </li>
                     </ol>
                 </div>
